# rust-gateway

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml
cmd/: Cargo.toml
cmd/src/: main.rs  router.rs
crates/helper/: Cargo.toml
crates/helper/src/: config.rs
crates/s3api/: Cargo.toml
crates/s3api/src/: README.md  acl.rs  api_handlers.rs  api_header.rs  api_response.rs  api_router.rs  bucket_handlers.rs  credential.rs  lib.rs  object_handlers.rs  object_interface.rs
crates/s3api/src/datatype/: acl.rs  api_datatypes.rs  bucket_logging.rs  cors.rs  datetime.rs  lifecycle.rs  mod.rs  versioning.rs
crates/s3api/src/signature/: auth_handler.rs  mod.rs  streaming_signature_v4.rs  v2.rs  v4.rs  v4_parser.rs  v4_utils.rs
crates/s3err/: Cargo.toml
crates/s3err/src/: api_errors.rs  lib.rs
crates/storage/: Cargo.toml  README.md
crates/storage/src/: lib.rs  storage.rs  storage_impl.rs
deployments/rust-gateway/conf/: rust-gateway.toml
helper/: Cargo.toml
helper/src/: config.rs
s3-backend/: Cargo.toml
s3-backend/src/: lib.rs  memory.rs  proxy.rs
s3-core/: Cargo.toml
s3-core/src/: error.rs  lib.rs  request.rs  response.rs  types.rs  util.rs  versioning.rs
s3-iam/: Cargo.toml  README.md  build.rs
s3-iam/proto/: iam.proto
s3-iam/src/: lib.rs
s3-iam/src/client/: main.rs
s3-iam/src/iampb/: iam.rs  mod.rs
s3-iam/src/server/: main.rs  server.rs
s3-server/: Cargo.toml
s3-server/migrations/: 000001_create_schema.down.sql  000001_create_schema.up.sql
s3-server/src/: config.rs  main.rs  server.rs
s3-server/src/authz/: handler.rs  mod.rs  v4.rs  v4_parser.rs  v4_utils.rs
s3-server/src/backend/: memory.rs  mod.rs  proxy.rs  types.rs
s3-server/src/backend/database/: db.rs  db_reader.rs  db_writer.rs  filters.rs  mod.rs
s3-server/src/backend/fullstack/: fullstack.rs  mod.rs
s3-server/src/backend/memory/: memory.rs  mod.rs  reader.rs  writer.rs
s3-server/src/backend/postgres/: db.rs
s3-server/src/backend/postgres/migrations/: 000001_create_schema.up.sql
s3-server/src/backend/proxy/: mod.rs  proxy.rs
s3-server/src/backend/storage/: mod.rs  storage.rs
s3-server/src/filter/: authentication.rs  bucket.rs  mod.rs  parser.rs  rate_limiter.rs  request_id.rs  secret_key.rs  types.rs
s3-server/src/handler/: bucket.rs  mod.rs  object.rs  types.rs
s3-server/src/limiter/: handler.rs
s3-server/src/request/: access_key.rs  mod.rs  types.rs
s3-server/src/router/: router.rs
s3-server/src/signature/: handler.rs  v4.rs
