[workspace]
members = [
    "s3-core",
    "s3-server", 
    "s3-iam",
]
resolver = "2"

[profile.release]
opt-level = 3
lto = true

[workspace.dependencies]
async-trait = "0.1.83"
aws-sdk-s3 = { version = "1.59.0", features = ["behavior-version-latest"] }
aws-smithy-xml = "0.60.9"
axum = { version = "0.7.7", features = ["multipart"] }
chrono = "0.4.38"
prost = "0.13.3"
serde = { version = "1.0.210" }
serde_derive = "1.0.210"
tokio = { version = "1.40.0", features = ["full"] }
tonic = "0.12.3"
thiserror = "1.0.64"
quick-xml = { version = "0.36.2", features = ["serialize"] }
