[package]
name = "cmd"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust-gateway"
path = "src/main.rs"

[dependencies]
actix-web = { workspace = true }
helper = { path = "../helper" }
s3api = { path = "../crates/s3api" }
storage = { path = "../crates/storage" }
tokio = { version = "1.39.2", features = ["full"] }
tonic = { version = "0.12.1", features = ["tls"] }
