[package]
name = "s3-core"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-smithy-xml = { workspace = true }
axum = { workspace = true }
bytes = "1.7.2"
chrono = { workspace = true }
http = "1.1.0"
quick-xml = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
thiserror = { workspace = true }
