[package]
name = "s3-iam"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = { workspace = true}
sqlx = { version = "0.8.2", features = ["runtime-tokio", "tls-rustls-ring"] }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
glob = "0.3.1"
prost-build = "0.13.3"
tonic-build = "0.12.3"

[[bin]]
name = "s3-iam-server"
path = "src/server/main.rs"

[[bin]]
name = "s3-iam-client"
path = "src/client/main.rs"
