[package]
name = "s3-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
s3-backend = { path = "../s3-backend" }
s3-core = { path = "../s3-core" }
s3-iam = { path = "../s3-iam" }
hmac = "0.12.1"
sha2 = "0.10.8"
chrono = { workspace = true }
md-5 = "0.10.6"
base64 = "0.22.1"
const-hex = "1.13.1"
subtle = "2.6.1"
