[package]
name = "s3-server"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.5.10", features = ["behavior-version-latest"] }
aws-sdk-s3 = { workspace = true }
axum = { workspace = true, features = ["multipart", "macros"] }
base64 = "0.22.1"
ceph = "3.2.5"
chrono = { workspace = true }
const-hex = "1.13.1"
hmac = "0.12.1"
md-5 = "0.10.6"
redis = { version = "0.27.5", features = ["tokio-rustls-comp"] }
reqwest = { version = "0.12.9", features = ["stream"] }
s3-core = { path = "../s3-core" }
s3-iam = { path = "../s3-iam" }
serde = { workspace = true }
serde_json = "1.0.132"
sha2 = "0.10.8"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "uuid", "chrono", "json", "postgres" ] }
subtle = "2.6.1"
sync_wrapper = { version = "1.0.1", features = ["futures"] }
tokio = { workspace = true }
toml = "0.8.19"
tonic = { workspace = true }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["fast-rng", "v4", "v7"] }
