[package]
name = "s3api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { workspace = true }
aws-sdk-s3 = { workspace = true }
anyhow = { workspace = true }
chrono = "0.4.38"
helper = { path = "../../helper" }
quick-xml = { version = "0.36.1", features = ["serialize"] }
serde = { workspace = true }
serde_derive = { workspace = true }
s3err = { path = "../s3err" }
regex = "1.10.6"
