[package]
name = "s3api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { workspace = true }
aws-sdk-s3 = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
const-hex = "1.12.0"
helper = { path = "../../helper" }
hmac = "0.12.1"
quick-xml = { version = "0.36.1", features = ["serialize"] }
serde = { workspace = true }
serde_derive = { workspace = true }
s3err = { path = "../s3err" }
regex = "1.10.6"
sha2 = "0.10.8"
